...GI..... [ZBX-6587] fixed Windows binary descriptions (dimir)
...G...... [ZBXNEXT-1528] added net.if.in, net.if.out and net.if.total item support on HP-UX platform (igors)

Bug fixes:
..F....... [ZBX-6888] fixed javascript error in popups with "select all" checkbox
.......P.. [ZBX-6897] fixed synchronization of the "httptest" configuration table (Sasha)
........S. [ZBX-6898] fixed processing of queue request; not checked items will be included to the queue (Sasha)
........S. [ZBX-6889] fixed processing of availability data by the server (Sasha)
A......... [ZBX-6885] fixed host group error message on delete (Vitalij)
....I..... [ZBX-1583] removed duplicated indexes for 6 tables when using MySQL (igors)
..F....... [ZBX-6864] fixed fullscreen parameter validation (Vitalij)
A.F....... [ZBX-6865] fixed "NULL" value validation (Ivo)
..F....... [ZBX-6863] fixed severity buttonset colors displayng (Eduard)
A......... [ZBX-6386] fixed discovered fields update validation in items, triggers and graphs (Eduard)
A.F.I..... [ZBX-6020] fixed displaying MySQL errors for PHP 5.5.0 and newer; thanks to Michel Meyers (Ivo)
.......PS. [ZBX-6746] fixed template linking to proxy if the agent with the same name is auto-registered (igors)
A......... [ZBX-6458] fixed "name" parameter validation for hostgroup.update method and improved error messages (Ivo)
..F....... [ZBX-6838] fixed bug with SQL errors in the application popup window (Guntis)
..F....... [ZBX-6817] fixed update for web scenarios, to link items to the right application (Guntis)
..F....... [ZBX-6837] added possibility select templated hosts in item configuration list filter (Guntis)
..F....... [ZBX-6795] corrected percentage value in graph pie charts (Guntis)
..F....... [ZBX-6283] added graph filter gradation recalculation (Ivo)
..F....... [ZBX-6451] fixed the amount of items and triggers displayed for "Status of Zabbix" (Ivo)
...G...... [ZBX-6672] fixed Windows agent performance counters being capped to 100 (wiper)