@@ -61,13 +61,13 @@ New features:
 Bug fixes:
 ..F....... [ZBX-6888] fixed javascript error in popups with "select all" checkbox
 .......P.. [ZBX-6897] fixed synchronization of the "httptest" configuration table (Sasha)
-........S. [ZBX-6898] fixed processing of queue request; not checked items will be included to the queue (Sasha)
+........S. [ZBX-6898] fixed processing of queue request; items that are not checked will be included in the queue (Sasha)
 ........S. [ZBX-6889] fixed processing of availability data by the server (Sasha)
 A......... [ZBX-6885] fixed host group error message on delete (Vitalij)
 ....I..... [ZBX-1583] removed duplicated indexes for 6 tables when using MySQL (igors)
 ..F....... [ZBX-6864] fixed fullscreen parameter validation (Vitalij)
 A.F....... [ZBX-6865] fixed "NULL" value validation (Ivo)
-..F....... [ZBX-6863] fixed severity buttonset colors displayng (Eduard)
+..F....... [ZBX-6863] fixed severity buttonset colour displaying (Eduard)
 A......... [ZBX-6386] fixed discovered fields update validation in items, triggers and graphs (Eduard)
 A.F.I..... [ZBX-6020] fixed displaying MySQL errors for PHP 5.5.0 and newer; thanks to Michel Meyers (Ivo)
 .......PS. [ZBX-6746] fixed template linking to proxy if the agent with the same name is auto-registered (igors)
@@ -107,6 +107,7 @@ A......... [ZBX-6699] added object flags in Host, Host group, Template and Item 
 Changes for 2.1.1
 
 New features:
+..F....... [ZBX-6663] in bulk actions dropdown and "Go" button are now disabled if no items are selected or all visible checkboxes on page are disabled (Ivo)
 A.F.....S. [ZBXNEXT-1689] decreased number of operations with table "items" (Pavels, wiper)
 A......... [ZBXNEXT-1689] dropped support of the prevorgvalue property in the item API (Pavels)
 A......... [ZBXNEXT-1689] removed the with_historical_items parameter from host.get and hostgroup.get (Pavels)
